# PPHelper

./: .gitignore  .gitmodules  README.md  android.yml  build.gradle  gradle.properties  local.properties  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/androidTest/java/cn/lliiooll/pphelper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  dexkit.cpp  ffmpeg.c  log.h  md5.h  native.cpp  v2sign.h
app/src/main/cpp/include/: cmdutils.h  cn_lliiooll_pphelper_ffmpeg_FFmpeg.h  config.h  ffmpeg.h
app/src/main/cpp/include/lame/: lame.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/cn/lliiooll/pphelper/activity/: AboutActivity.kt  AppCompatTransferActivity.java  ConfigActivity.java  CustomVideoRecordActivity.java  DownloadActivity.kt  EulaActivity.kt  HidePostActivity.java  LogActivity.java  LogActivity.kt  MainActivity.java  MainActivity.kt  SettingsActivity.kt  SimpleMeActivity.java
app/src/main/java/cn/lliiooll/pphelper/aio/: AIOCommentPublish.java  AudioBuilder.java
app/src/main/java/cn/lliiooll/pphelper/app/: PPHelperImpl.java
app/src/main/java/cn/lliiooll/pphelper/config/: ConfigManager.java  PConfig.java
app/src/main/java/cn/lliiooll/pphelper/data/: CommentBeanData.java  ServerImageBeanData.java  ServerVideoBeanData.java
app/src/main/java/cn/lliiooll/pphelper/download/: DownloadCallback.java  DownloadManager.java
app/src/main/java/cn/lliiooll/pphelper/ffmpeg/: FFmpeg.java  FFmpegCallBack.java
app/src/main/java/cn/lliiooll/pphelper/hook/: AccountHook.kt  AddSetting.java  AntiAD.java  AntiHotfixHook.kt  AntiVoiceRoomHook.java  AriaInitHook.kt  AutoTaskHook.kt  BaseHook.java  CustomData.java  CustomVideoRecord.java  CustomVoiceHook.kt  FixQuitHook.kt  HidePostHook.kt  HookBus.java  Hooks.java  NoMark.java  NoMarkHook.kt  PPLog.java  RemoveADHook.kt  RemoveEvilInstrumentationHook.java  RemoveGameHook.kt  RemoveLiveHook.kt  RemovePost.java  RemoveVoiceRoomHook.kt  RemoveZyBuffHook.java  SettingHook.kt  ShowHideHook.kt  SimpleMe.java  SimpleMeHook.kt  TestHook.java  TestHook.kt  VoiceDownloadHook.kt
app/src/main/java/cn/lliiooll/pphelper/lifecycle/: ActProxyMgr.java  CounterfeitActivityInfoFactory.java  IActivityManagerHandler.java  PackageManagerInvocationHandler.java  ParasiticHandler.java  ParasiticInstrumentation.java  Parasitics.java
app/src/main/java/cn/lliiooll/pphelper/startup/: ActivityProxyInjector.java  ClassLoaderInjector.java  HookEntry.java  HybridClassLoader.java  ModuleLauncher.java  ResourcesInjector.java  StartupHook.java
app/src/main/java/cn/lliiooll/pphelper/utils/: AppUtils.java  AudioBuilder.java  BlurUtil.java  CliOper.java  CreateSpecificTypeDocument.kt  DexKit.java  DexUtils.java  DownloadManager.kt  FileUtil.java  HideList.java  HostInfo.java  HybridClassLoader.java  IOUtils.java  IoUtil.java  MD5Util.java  MediaStoreUtils.java  Natives.java  PConfig.java  PLog.java  PPVersion.java  PermissionUtils.java  PostTypes.java  StoreUtils.kt  (+4 more)
app/src/main/res/anim/: main_info_rotate_anim.xml  main_info_rotate_anim_back.xml  main_more_rotate_anim.xml  main_more_rotate_anim_back.xml
app/src/main/res/animator/: selector_animator.xml
app/src/main/res/drawable/: bg_github.xml  bg_group.xml  bg_new_version.xml  bg_round_about.xml  bg_round_btn.xml  bg_round_btn_press.xml  bg_round_button.xml  bg_round_button_ok.xml  bg_round_dialog.xml  bg_round_disable.xml  bg_round_enable.xml  bg_round_info.xml  bg_round_normal.xml  bg_round_status.xml  divider_line.xml  ic_close.xml  ic_more.xml  ic_netease_music.xml  ic_round_check.xml  ic_round_close.xml  ic_round_pressed.xml  ic_round_selected.xml  ic_round_unselected.xml  ic_save.xml  ic_up.xml  ic_voice.xml  pp_checkbox.xml  style_switch_thumb.xml  style_switch_track_off.xml  style_switch_track_on.xml  style_switch_track_selector.xml
app/src/main/res/layout/: about_activity.xml  activity_custom_download.xml  activity_log.xml  activity_main.xml  activity_sendvoice.xml  activity_setting.xml  activity_simpleme.xml  activity_test.xml  download_activity.xml  empty.xml  eula_activity.xml  log_activity.xml  main_activity.xml  pp_dialog_confirm.xml  pp_dialog_input.xml  pp_dialog_number.xml  pp_dialog_select.xml  pp_dialog_select_child.xml  pp_dialog_voice.xml  pp_setting.xml  pp_setting_bar.xml  pp_setting_normal.xml  pp_sm_normal.xml  pp_spalsh.xml  settings_activity.xml  settings_child.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: appcenter_backup_rule_h.xml
dexkit/: CMakeLists.txt  build.gradle  native-bridge.cpp
gradle/wrapper/: gradle-wrapper.properties
mmkv/: .gitignore  CMakeLists.txt  build.gradle  native-bridge.cpp
stub/: build.gradle
stub/src/main/: AndroidManifest.xml
versionPlugin/: build.gradle
(+49 files in other folders)
